src/components/variables.scss
// BEM Mixins
@mixin e($element) {
  &__#{$element} {
      @content;
  }
}

@mixin m($modifier) {
  &--#{$modifier} {
      @content;
  }
}

@mixin for-phone-only {
  @media screen and (min-width: $min-mobile-device-width) and (max-width: $max-mobile-device-width) {
    @content;
  }
}

// Config vars
$kaldi-red:#f93257;
$kaldi-red-invert: #fff;

//Font sizes
$h1-font-size: 2em;
$h2-font-size: 1.5em;
$h3-font-size: 1em;
$h4-font-size: 0.5em;

// Colors
$primary: $kaldi-red;
$primary-invert: $kaldi-red-invert;
$midnight-black: black;
$midnight-gray: #1a1a1a;
$content-gray: lightgray;
$content-green: #14ff72;
$content-title: white;
$post-text-color: white;
$body-color: #333;
$black: #2b2523;

// Device widths
$min-mobile-device-width: 300px;
$max-mobile-device-width: 812px;

$min-tablet-device-width: 768px;
$max-tablet-device-width: 1024px;

$min-laptop-device-width: 1200px;
$max-laptop-device-width: 1600px;

